<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. 2Lines Software,Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/textAppearanceLarge"
            android:layout_marginLeft="15dip"
            android:text="@string/login_title" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_marginLeft="@dimen/content_margins"
            android:layout_marginRight="@dimen/content_margins"
            android:layout_marginBottom="@dimen/content_margins_half"
            android:layout_marginTop="@dimen/content_margins_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_action_add_person"
            android:drawablePadding="@dimen/content_margins_half"
            android:hint="@string/login_email" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_marginLeft="@dimen/content_margins"
            android:layout_marginRight="@dimen/content_margins"
            android:layout_marginBottom="@dimen/content_margins_half"
            android:layout_marginTop="@dimen/content_margins_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_accounts"
            android:singleLine="true"

            android:hint="@string/login_password"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/button_login"
            android:layout_marginLeft="@dimen/content_margins"
            android:layout_marginRight="@dimen/content_margins"
            android:layout_marginBottom="@dimen/content_margins_half"
            android:layout_marginTop="@dimen/content_margins_half"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pal_button"
            android:text="@string/login_button" />

        <TextView
            android:id="@+id/text_forgot_password"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/SmarterList.TextStyle.Caption"
            android:bufferType="spannable"
            android:text="@string/login_forgot"
            android:layout_margin="@dimen/content_margins_half"/>

    </LinearLayout>



</LinearLayout>