<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015. 2Lines Software,Inc
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   you may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/pal_grey_1">



        <TextView
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmarterList.CaptionBar"
            android:text="@string/create_details" />
        <LinearLayout
            android:layout_gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeightLarge"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_gravity="bottom|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margins"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edit_smartlist_name"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_margins"
                    style="@style/SmarterList.TextStyle.Title"
                    android:hint="@string/create_choose_title" />

                <EditText
                    android:id="@+id/edit_smartlist_description"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/content_margins"
                    style="@style/SmarterList.TextStyle.Body"
                    android:hint="@string/create_choose_desc" />

            </LinearLayout>


        </LinearLayout>

        <!--TextView
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmarterList.CaptionBar"
            android:text="@string/create_lists" />

        <LinearLayout
            android:id="@+id/layout_select_masterlist"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:stateListAnimator="@anim/raise">


            <ImageView
                android:id="@+id/imagecheck_icon"
                android:layout_width="@dimen/image_list_icon_sm"
                android:layout_height="@dimen/image_list_icon_sm"
                android:src="@drawable/ic_empty"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/content_margins"
                android:layout_marginRight="@dimen/content_margins"
                android:layout_marginTop="@dimen/content_margins_half"
                android:layout_marginBottom="@dimen/content_margins_half" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margins"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_masterlist_name"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Body"
                    android:hint="@string/create_choose_list" />

                <TextView
                    android:id="@+id/text_info_sub"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    android:layout_marginBottom="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Caption"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout-->


        <TextView
            android:id="@+id/text_select_sharing"
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmarterList.CaptionBar"
            android:text="@string/create_sharing"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/layout_select_sharing"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:orientation="horizontal"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:stateListAnimator="@anim/raise"
            android:visibility="gone"
            tools:ignore="UnusedAttribute">


            <ImageView
                android:layout_width="@dimen/image_list_icon_sm"
                android:layout_height="@dimen/image_list_icon_sm"
                android:src="@drawable/ic_action_add_group"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/content_margins"
                android:layout_marginRight="@dimen/content_margins"
                android:layout_marginTop="@dimen/content_margins_half"
                android:layout_marginBottom="@dimen/content_margins_half" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margins"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_sharing_name"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Body"
                    android:hint="@string/create_add_sharing" />

                <TextView
                    android:id="@+id/text_sharing_name_sub"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    android:layout_marginBottom="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Caption"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SmarterList.CaptionBar"
            android:visibility="gone"
            android:text="@string/create_places_notification" />
        <LinearLayout
            android:id="@+id/layout_select_places"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:orientation="horizontal"
            android:visibility="gone"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:stateListAnimator="@anim/raise"
            tools:ignore="UnusedAttribute">


            <ImageView
                android:layout_width="@dimen/image_list_icon_sm"
                android:layout_height="@dimen/image_list_icon_sm"
                android:src="@drawable/ic_action_place"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/content_margins"
                android:layout_marginRight="@dimen/content_margins"
                android:layout_marginTop="@dimen/content_margins_half"
                android:layout_marginBottom="@dimen/content_margins_half" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margins"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_places_name"
                    android:layout_gravity="left|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Body"
                    android:hint="@string/create_choose_destination" />

                <TextView
                    android:id="@+id/text_places_name_sub"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_margins_half"
                    android:layout_marginBottom="@dimen/content_margins_half"
                    style="@style/SmarterList.TextStyle.Caption"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>