<!--
  ~ Copyright (c) 2015. 2Lines Software,Inc
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/navigation_drawer_width"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pal_white"
    android:layout_marginTop="24dp"
    tools:context=".fragment.NavigationDrawerFragment">

        <!-- Navigation Header -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pal_grey_3">

            <ImageView
                android:layout_width="@dimen/icon_small_halo"
                android:layout_height="@dimen/icon_small_halo"
                android:layout_gravity="left|top"
                android:layout_marginLeft="@dimen/content_margins"
                android:layout_marginRight="@dimen/content_margins"
                android:layout_marginTop="@dimen/content_margins_half"
                android:layout_marginBottom="@dimen/content_margins_half"
                android:src="@mipmap/ic_launcher"
                />


            <TextView
                android:id="@+id/text_drawer_email"
                android:layout_gravity="left"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/SmarterList.TextStyle.Body"
                android:layout_marginLeft="@dimen/content_margins"
                android:layout_marginRight="@dimen/content_margins"
                android:layout_marginTop="@dimen/content_margins_half"
                android:layout_marginBottom="@dimen/content_margins_half"
                android:text="@string/navigation_drawer_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/pal_grey_5"/>

        </LinearLayout>

    <TextView
        android:layout_gravity="left|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SmarterList.CaptionBar"
        android:text="@string/drawer_account"/>

    <LinearLayout
        android:id="@+id/layout_drawer_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:layout_gravity="center"
        android:stateListAnimator="@anim/raise"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:layout_width="@dimen/icon_small_standard"
            android:layout_height="@dimen/icon_small_standard"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/content_margins"
            android:layout_marginRight="@dimen/content_margins"
            android:layout_marginTop="@dimen/content_margins_half"
            android:layout_marginBottom="@dimen/content_margins_half"
            android:src="@drawable/ic_action_add_person"
            />


        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/content_margins"
            style="@style/SmarterList.TextStyle.Body"
            android:layout_gravity="center"
            android:text="@string/drawer_signup"
            />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/pal_grey_5"/>


</LinearLayout>